añado tagH1, notese el error en consola debido a que aun no es de tipo Babel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <title>React App</title>
 </head>
 <body>
+
+  <script >
+    const h1Tag = <h1> Hola Mundo </h1>;
+  </script>
   
 </body>
 </html>
