--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 </head>
 <body>
 
+  <div id="root"></div>
+
   <script type="script/babel" >
+    const divRoot = document.querySelector('#root');
+
     const h1Tag = <h1> Hola Mundo </h1>;
+
+
   </script>
   
 </body>
