--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
   <div id="root"></div>
 
-  <script type="script/babel" >
+  <script type="text/babel" >
     const divRoot = document.querySelector('#root');
 
     const h1Tag = <h1> Hola Mundo </h1>;
 
+    ReactDOM.render( h1Tag, divRoot );
 
   </script>
   
